# BazelSetup

./: WORKSPACE.bazel
backend/: BUILD.bazel
frontend/: BUILD.bazel
