load("@npm//:package.bzl", "npm_package", "ts_library")

npm_package(
    name = "frontend_deps",
    package_json = "//frontend:package.json",
    visibility = ["//visibility:public"],
)

ts_library(
    name = "frontend",
    srcs = glob(["src/**/*.tsx", "src/**/*.ts"]),
    deps = [":frontend_deps"],
)

